; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_nct6775.c_show_temp_alarm.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_nct6775.c_show_temp_alarm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.sensor_device_attribute = type { i32 }
%struct.nct6775_data = type { i32*, i32, i32 }

@TEMP_ALARM_BASE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @show_temp_alarm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_temp_alarm(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.sensor_device_attribute*, align 8
  %8 = alloca %struct.nct6775_data*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %12 = load %struct.device_attribute*, %struct.device_attribute** %5, align 8
  %13 = call %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute* %12)
  store %struct.sensor_device_attribute* %13, %struct.sensor_device_attribute** %7, align 8
  %14 = load %struct.device*, %struct.device** %4, align 8
  %15 = call %struct.nct6775_data* @nct6775_update_device(%struct.device* %14)
  store %struct.nct6775_data* %15, %struct.nct6775_data** %8, align 8
  store i32 0, i32* %9, align 4
  %16 = load %struct.nct6775_data*, %struct.nct6775_data** %8, align 8
  %17 = load %struct.sensor_device_attribute*, %struct.sensor_device_attribute** %7, align 8
  %18 = getelementptr inbounds %struct.sensor_device_attribute, %struct.sensor_device_attribute* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.nct6775_data*, %struct.nct6775_data** %8, align 8
  %21 = getelementptr inbounds %struct.nct6775_data, %struct.nct6775_data* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @find_temp_source(%struct.nct6775_data* %16, i32 %19, i32 %22)
  store i32 %23, i32* %10, align 4
  %24 = load i32, i32* %10, align 4
  %25 = icmp sge i32 %24, 0
  br i1 %25, label %26, label %42

26:                                               ; preds = %3
  %27 = load %struct.nct6775_data*, %struct.nct6775_data** %8, align 8
  %28 = getelementptr inbounds %struct.nct6775_data, %struct.nct6775_data* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* @TEMP_ALARM_BASE, align 4
  %32 = add nsw i32 %30, %31
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds i32, i32* %29, i64 %33
  %35 = load i32, i32* %34, align 4
  store i32 %35, i32* %11, align 4
  %36 = load %struct.nct6775_data*, %struct.nct6775_data** %8, align 8
  %37 = getelementptr inbounds %struct.nct6775_data, %struct.nct6775_data* %36, i32 0, i32 1
  %38 = load i32, i32* %37, align 8
  %39 = load i32, i32* %11, align 4
  %40 = ashr i32 %38, %39
  %41 = and i32 %40, 1
  store i32 %41, i32* %9, align 4
  br label %42

42:                                               ; preds = %26, %3
  %43 = load i8*, i8** %6, align 8
  %44 = load i32, i32* %9, align 4
  %45 = call i32 @sprintf(i8* %43, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %44)
  ret i32 %45
}

declare dso_local %struct.sensor_device_attribute* @to_sensor_dev_attr(%struct.device_attribute*) #1

declare dso_local %struct.nct6775_data* @nct6775_update_device(%struct.device*) #1

declare dso_local i32 @find_temp_source(%struct.nct6775_data*, i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
